--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "react-components-library-skc",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "",
   "scripts": {
     "rollup": "rollup -c",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "",
   "license": "ISC",
@@ -17,26 +19,52 @@
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.3",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-interactions": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^7.4.0",
+    "@storybook/react-webpack5": "^7.4.0",
+    "@storybook/testing-library": "^0.2.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.4",
     "@types/react": "^18.2.21",
+    "antd": "^5.8.5",
+    "apexcharts": "^3.42.0",
     "babel-jest": "^29.6.4",
+    "bootstrap": "^5.3.1",
+    "css-loader": "^6.8.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "reactstrap": "^9.2.0",
     "rollup": "^3.28.1",
     "rollup-plugin-dts": "^6.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-scss": "^4.0.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
+    "storybook": "^7.4.0",
+    "style-loader": "^3.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
+    "antd": "^5.8.5",
+    "bootstrap": "^5.3.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "reactstrap": "^9.2.0",
+    "apexcharts": "^3.42.0",
+    "react-apexcharts": "^1.4.1"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
