--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-components-library-skc",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "description": "",
   "scripts": {
     "rollup": "rollup -c",
@@ -42,6 +42,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "reactstrap": "^9.2.0",
     "rollup": "^3.28.1",
@@ -58,13 +59,14 @@
   },
   "peerDependencies": {
     "antd": "^5.8.5",
+    "apexcharts": "^3.42.0",
     "bootstrap": "^5.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "reactstrap": "^9.2.0",
-    "apexcharts": "^3.42.0",
-    "react-apexcharts": "^1.4.1"
+    "reactstrap": "^9.2.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
