--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "reactstrap": "^9.2.0",
     "rollup": "^3.28.1",
     "rollup-plugin-dts": "^6.0.0",
@@ -66,7 +68,9 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "reactstrap": "^9.2.0"
+    "reactstrap": "^9.2.0",
+    "react-google-charts": "^4.0.1",
+    "react-perfect-scrollbar": "^1.5.8"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
