--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-components-library-skc",
-  "version": "0.1.6",
+  "version": "0.4.0",
   "description": "",
   "scripts": {
     "rollup": "rollup -c",
@@ -16,6 +16,7 @@
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.11",
     "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.3",
@@ -40,10 +41,8 @@
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-perfect-scrollbar": "^1.5.8",
     "reactstrap": "^9.2.0",
@@ -57,20 +56,22 @@
     "storybook": "^7.4.0",
     "style-loader": "^3.3.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "peerDependencies": {
     "antd": "^5.8.5",
     "apexcharts": "^3.42.0",
     "bootstrap": "^5.3.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^18.2.0",
-    "reactstrap": "^9.2.0",
     "react-google-charts": "^4.0.1",
-    "react-perfect-scrollbar": "^1.5.8"
+    "react-perfect-scrollbar": "^1.5.8",
+    "reactstrap": "^9.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
