--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-components-library-skc",
-  "version": "0.4.0",
+  "version": "0.4.5",
   "description": "",
   "scripts": {
     "rollup": "rollup -c",
@@ -41,6 +41,8 @@
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-google-charts": "^4.0.1",
@@ -56,9 +58,7 @@
     "storybook": "^7.4.0",
     "style-loader": "^3.3.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "antd": "^5.8.5",
@@ -67,11 +67,11 @@
     "prop-types": "^15.8.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap-icons": "^1.10.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-perfect-scrollbar": "^1.5.8",
-    "reactstrap": "^9.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "reactstrap": "^9.2.0"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
